tests/compile-fail/lexer/random.stderr
error: Unexpected token
  ┌─ $DD/tests/compile-fail/lexer/random.sk:1:1
  │
1 │ sss
  │ ^^^
  │
  = Expected: "const"
  = Expected: "fn"
  = Expected: "import"
  = Expected: "pub"

